Trapping the election overview in an auto-heighted container with overflow hidden to prevent scroll bar flicker when candidate creation form slides down

--- a/client/stylesheets/app_pages/_election_overview.scss
+++ b/client/stylesheets/app_pages/_election_overview.scss
@@ -1,5 +1,8 @@
 #app {
   #electionOverview {
+    clear: both;
+    overflow-y: hidden;
+
     .expandArrow {
       float: left;
       margin-right: 5px;
